Initial JDK 10 import
Former-commit-id: 5a59ef2f3e9e9e03c2af73127cc11f8eae807206